--- a/java/WFBSv02/src/View/AdminMainJFrame.form
+++ b/java/WFBSv02/src/View/AdminMainJFrame.form
@@ -39,6 +39,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="WFBS - Home Admin"/>
     <Property name="locationByPlatform" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
