--- a/java/WFBSv02/src/View/AdminMainJFrame.form
+++ b/java/WFBSv02/src/View/AdminMainJFrame.form
@@ -26,7 +26,7 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1salir">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Cerrar Aplicaci&#xf3;n"/>
+                <Property name="text" type="java.lang.String" value="Cerrar Sesi&#xf3;n"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1salirActionPerformed"/>
