--- a/java/WFBS-FX-0.1/src/PL/Style.css
+++ b/java/WFBS-FX-0.1/src/PL/Style.css
@@ -18,6 +18,12 @@ and open the template in the editor.
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
+.hbox{
+    -fx-padding: 20;
+    -fx-spacing: 20;
+    -fx-background-image: url("background-texture.jpg");
+}
+
 #welcome-text {
     -fx-font-size: 44px;
     -fx-font-family: "Arial Black";
