--- a/java/WFBS-FX-0.1/src/PL/Style.css
+++ b/java/WFBS-FX-0.1/src/PL/Style.css
@@ -11,6 +11,14 @@ and open the template in the editor.
     -fx-background-image: url("background.jpg");
 }
 
+.stack-pane{
+    -fx-padding: 20;
+}
+
+.table-view{
+
+}
+
 .label {
     -fx-font-size: 13px;
     -fx-font-weight: bold;
@@ -24,21 +32,21 @@ and open the template in the editor.
     -fx-background-image: url("background-texture.jpg");
 }
 
-#welcome-text {
+.title {
     -fx-font-size: 44px;
     -fx-font-family: "Arial Black";
     -fx-fill: #818181;
     -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
 }
 
-#subtitle {
+.subtitle {
     -fx-font-size: 22px;
     -fx-font-family: "Arial Narrow";
     -fx-fill: #818181;
     -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
 }
 
-#actiontarget {
+.action {
     -fx-font-size: 13px;
     -fx-fill: FIREBRICK;
     -fx-font-weight: bold;
