improving view, add answer maintainer

--- a/java/WFBS-FX-0.1/src/PL/Style.css
+++ b/java/WFBS-FX-0.1/src/PL/Style.css
@@ -11,14 +11,6 @@ and open the template in the editor.
     -fx-background-image: url("background.jpg");
 }
 
-.stack-pane{
-    -fx-padding: 20;
-}
-
-.table-view{
-
-}
-
 .label {
     -fx-font-size: 13px;
     -fx-font-weight: bold;
@@ -26,15 +18,19 @@ and open the template in the editor.
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
-.hbox{
-    -fx-padding: 20;
-    -fx-spacing: 20;
-    -fx-background-image: url("background-texture.jpg");
+.vbox{
+    -fx-padding: 10;
+    -fx-spacing: 10;
 }
 
-.vbox{
-    -fx-padding: 20;
-    -fx-spacing: 20;
+.hbox{
+    -fx-spacing: 10;
+}
+
+.topbox{
+    -fx-padding: 10;
+    -fx-spacing: 10;
+    -fx-background-image: url("lightgray.png");
 }
 
 .title {
@@ -59,6 +55,16 @@ and open the template in the editor.
 }
 
 .button {
+    -fx-text-fill: white;
+    -fx-font-size: 13px;
+    -fx-font-family: "Arial";
+    -fx-font-weight: bold;
+    -fx-background-color: linear-gradient(#61a2b1, #2A5058);
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+}
+
+.topbutton {
+    -fx-label-padding: 5 10 5 10;
     -fx-text-fill: white;
     -fx-font-size: 13px;
     -fx-font-family: "Arial";
