--- a/java/WFBS-FX-0.1/src/PL/Style.css
+++ b/java/WFBS-FX-0.1/src/PL/Style.css
@@ -8,7 +8,7 @@ and open the template in the editor.
     Author     : iosep
 */
 .root {
-    -fx-background-image: url("background.jpg");
+    -fx-background-image: url("grey.png");
 }
 
 .label {
@@ -25,12 +25,11 @@ and open the template in the editor.
 
 .hbox{
     -fx-spacing: 10;
+    -fx-padding: 20;
 }
 
-.topbox{
-    -fx-padding: 10;
-    -fx-spacing: 10;
-    -fx-background-image: url("lightgray.png");
+.hboxtop{
+    -fx-spacing: 5;
 }
 
 .title {
@@ -55,15 +54,6 @@ and open the template in the editor.
 }
 
 .button {
-    -fx-text-fill: white;
-    -fx-font-size: 13px;
-    -fx-font-family: "Arial";
-    -fx-font-weight: bold;
-    -fx-background-color: linear-gradient(#61a2b1, #2A5058);
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
-}
-
-.topbutton {
     -fx-label-padding: 5 10 5 10;
     -fx-text-fill: white;
     -fx-font-size: 13px;
@@ -76,4 +66,3 @@ and open the template in the editor.
 .button:hover {
     -fx-background-color: linear-gradient(#2A5058, #61a2b1);
 }
-
