--- a/java/WFBS-FX-0.1/src/PL/Style.css
+++ b/java/WFBS-FX-0.1/src/PL/Style.css
@@ -8,7 +8,7 @@ and open the template in the editor.
     Author     : iosep
 */
 .root {
-    -fx-background-image: url("grey.png");
+    -fx-background-image: url("whitey.png");
 }
 
 .label {
