add activeuser logout

--- a/java/WFBS-FX-0.1/src/PL/Style.css
+++ b/java/WFBS-FX-0.1/src/PL/Style.css
@@ -18,6 +18,12 @@ and open the template in the editor.
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
+.logout {
+    -fx-font-size: 13px;
+    -fx-font-weight: bold;
+    -fx-font-family: "Tahoma";
+}
+
 .vbox{
     -fx-padding: 10;
     -fx-spacing: 10;
