--- a/java/WFBS-FX-0.1/src/PL/Style.css
+++ b/java/WFBS-FX-0.1/src/PL/Style.css
@@ -29,6 +29,10 @@ and open the template in the editor.
     -fx-spacing: 10;
 }
 
+.between{
+    -fx-spacing: 20;
+}
+
 .hbox{
     -fx-spacing: 10;
     -fx-padding: 20;
