--- a/java/WFBS-FX-0.1/src/PL/Style.css
+++ b/java/WFBS-FX-0.1/src/PL/Style.css
@@ -57,10 +57,9 @@ and open the template in the editor.
 }
 
 .action {
-    -fx-font-size: 13px;
-    -fx-fill: FIREBRICK;
+    -fx-font-size: 14px;
+    -fx-fill: firebrick;
     -fx-font-weight: bold;
-    -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );  
 }
 
 .button {
