--- a/java/SEC-Arrays/src/PL/Style.css
+++ b/java/SEC-Arrays/src/PL/Style.css
@@ -42,6 +42,10 @@ and open the template in the editor.
     -fx-spacing: 5;
 }
 
+.hboxbottom{
+    -fx-padding: 0 0 13 0;
+}
+
 .title {
     -fx-font-size: 44px;
     -fx-font-family: "Arial Black";
@@ -63,7 +67,7 @@ and open the template in the editor.
 }
 
 .button {
-    -fx-label-padding: 5 10 5 10;
+    -fx-label-padding: 5;
     -fx-text-fill: white;
     -fx-font-size: 13px;
     -fx-font-family: "Arial";
