maximized admin start && F11 FullScreenKey

--- a/java/SEC-Arrays/src/PL/Style.css
+++ b/java/SEC-Arrays/src/PL/Style.css
@@ -79,3 +79,7 @@ and open the template in the editor.
 .button:hover {
     -fx-background-color: linear-gradient(#2A5058, #61a2b1);
 }
+
+.slimbutton {
+    -fx-label-padding: 0;
+}
