--- a/java/SEC/src/PL/Style.css
+++ b/java/SEC/src/PL/Style.css
@@ -81,3 +81,8 @@ and open the template in the editor.
 .topbutton {
     -fx-label-padding: 3;
 }
+
+.tree {
+    -fx-margin: 10;
+    -fx-padding: 10;
+}
