--- a/java/SEC-Arrays/src/PL/Style.css
+++ b/java/SEC-Arrays/src/PL/Style.css
@@ -53,10 +53,17 @@ and open the template in the editor.
     -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
 }
 
+.plane {
+    -fx-font-size: 18px;
+    -fx-font-family: "Arial Black";
+    -fx-fill: #818181;
+    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
+}
+
 .subtitle {
     -fx-font-size: 17px;
     -fx-font-family: "Arial Narrow";
-    -fx-fill: #818181;
+    -fx-fill: darkslategrey;
 }
 
 .action {
@@ -85,4 +92,9 @@ and open the template in the editor.
 .tree {
     -fx-margin: 10;
     -fx-padding: 10;
+}
+
+.vcenter {
+    -fx-spacing: 10;
+    -fx-padding: 10 30 30 40;
 }
